# direct-ynab

./: .envrc  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LIBS.md  TASKS.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-archaeologist.md  code-quality-reviewer.md  tdd-red-green-refactor.md
.claude/commands/: next.md
.claude/hooks/: ruff_on_edit.sh
src/orchestration/: cli.py
src/ynab_io/: _version.py  budget_calculator.py  device_manager.py  models.py  parser.py  reader.py  safety.py  testing.py  writer.py
src/ynab_io/orchestration/: __init__.py  cli.py
tests/: VERSION_AWARE_TESTING_SUMMARY.md  conftest.py  test_budget_calculator.py  test_budget_version_annotation.py  test_cli.py  test_device_manager.py  test_environment.py  test_fixture_version_isolation.py  test_parser.py  test_path_discovery_consolidation.py  test_read_modify_write.py  test_reader.py  test_robust_device_selection.py  test_safety.py  test_version_annotation_examples.py  test_version_aware_fixture_integration.py  test_version_isolation_problem.py  test_ynab_write_logic.py
tests/fixtures/My Test Budget~E0C1460F.ynab4/: Backup_2025-08-31T10-31-23_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-08-31T10-32-52_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-02T16-33-59_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-05T08-29-08_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-05T08-32-09_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-05T08-32-44_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-05T08-32-51_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-05T08-33-05_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-05T08-34-15_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-05T08-38-58_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-05T08-39-34_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-05T08-39-44_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-05T08-40-05_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-05T09-03-01_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-05T09-22-29_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-05T09-23-06_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-05T09-23-29_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-05T09-23-37_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Backup_2025-09-06T09-23-52_A_DDBC2A7E-AE4D-B8A5-0759-B56799918579.y4backup  Budget.ymeta
tests/fixtures/My Test Budget~E0C1460F.ynab4/data1~F5FF7453/DDBC2A7E-AE4D-B8A5-0759-B56799918579/: A-107_A-110.ydiff  A-110_A-114.ydiff  A-114_A-115.ydiff  A-115_A-117.ydiff  A-117_A-120.ydiff  A-120_A-128.ydiff  A-128_A-130.ydiff  A-130_A-133.ydiff  A-133_A-134.ydiff  A-134_A-135.ydiff  A-135_A-137.ydiff  A-137_A-138.ydiff  A-138_A-139.ydiff  A-139_A-140.ydiff  A-140_A-141.ydiff  A-141_A-142.ydiff  A-142_A-143.ydiff  A-143_A-146.ydiff  A-146_A-149.ydiff  A-149_A-150.ydiff  A-150_A-153.ydiff  A-153_A-154.ydiff  A-154_A-157.ydiff  A-63_A-67.ydiff  A-67_A-69.ydiff  A-69_A-71.ydiff  A-71_A-72.ydiff  A-72_A-73.ydiff  A-73_A-76.ydiff  A-76_A-79.ydiff  A-79_A-84.ydiff  A-84_A-87.ydiff  A-87_A-93.ydiff  A-93_A-107.ydiff  Budget.yfull  budgetSettings.ybsettings
tests/fixtures/My Test Budget~E0C1460F.ynab4/data1~F5FF7453/devices/: A.ydevice
