[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "direct-ynab"
description = "AI-powered YNAB4 transaction categorization tool"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "YNAB Direct User", email = "user@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

dependencies = [
    # Phase 0 dependencies
    "pytest>=7.0.0",
    "pydantic>=2.0.0", 
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "filelock>=3.0.0",
    # Phase 4 dependencies (AI/LLM)
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    # CLI dependencies 
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "assertpy",
]

[project.scripts]
ynab-ai = "ynab_io.orchestration.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/ynab_io/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[flake8]
max-line-length = 88
ignore = ["E501", "W292", "F811", "F541"]
